# rust_tui_rag_4

./: .env.example  Cargo.toml  Makefile  README.md  build.rs  embed.cpp  sample.cpp  table.sql
data/: 1.txt  2.txt
include/: GeminiEmbeddingClient.hpp  db_add.hpp  db_search.hpp  dotenv.h  http_client.hpp  my_config.hpp  my_db.hpp  my_rag.hpp  my_todo.hpp  openrouter_client.hpp
src/: main.rs
