[package]
name = "rata_rag_1"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
color-eyre = "0.6.3"
crossterm = "0.27"
ratatui = "0.26"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
